# snakemake_invoke

./: .copier-answers.yml  .gitignore  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: conf.py  index.md
src/snakemake_invoke/: __init__.py  config.py
src/snakemake_invoke/invoke/: invoke.py  invoke_call_function.py  invoke_subprocess.py
tests/: test_invoke.py  test_package.py
tests/invoke/: test_invoke.py  test_invoke_call_function.py  test_invoke_subprocess.py
